--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.21.1",
     "helmet": "^8.0.0",
     "morgan": "^1.10.0",
+    "multer": "^2.0.0",
     "mysql2": "^3.14.1"
   },
   "devDependencies": {
@@ -32,6 +35,7 @@
     "@types/express": "^4.17.20",
     "@types/jest": "^29.5.13",
     "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.7.5",
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^7.16.1",
